force-app/main/default/objects/custom_create115__c/custom_create115__c.object-meta.xml
<CustomObject>
    <label>Custom created object115</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects115</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>