force-app/main/default/objects/custom_create115__c/fields/custom_create_115field520__c.field-meta.xml
<CustomField>
    <fullName>custom_create_115field520__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 115field520</label>
    <type>Checkbox</type>
</CustomField>