force-app/main/default/objects/custom_create115__c/fields/custom_create_115field530__c.field-meta.xml
<CustomField>
    <fullName>custom_create_115field530__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 115field530</label>
    <type>Checkbox</type>
</CustomField>